# munninAI

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: architecture.json  incidents.json  postmortems.json
forge/: __init__.py
forge/agents/: __init__.py  base.py  incident_responder.py  knowledge_gap_detector.py  outputs.py  postmortem_generator.py
forge/cli/: __init__.py  main.py
forge/core/: __init__.py  cognee_client.py  config.py  exceptions.py  logging.py
forge/ingestion/: __init__.py  engine.py  models.py
forge/web/: __init__.py  app.py  dependencies.py
forge/web/routes/: __init__.py  api.py  dashboard.py  demo.py  incident_response.py  incidents.py  knowledge_gaps.py  postmortems.py
forge/web/static/css/: custom.css
forge/web/static/js/: app.js
forge/web/templates/: base.html
forge/web/templates/components/cards/: incident_card.html  metric_card.html  metrics_refresh.html  postmortem_card.html  service_card.html
forge/web/templates/components/displays/: diagnosis.html  gaps_results.html  investigation_update.html  postmortem_generated.html  resolution.html  timeline.html
forge/web/templates/components/feedback/: empty_state.html  error_state.html  loading.html  success_state.html
forge/web/templates/components/forms/: alert_form.html
forge/web/templates/pages/: dashboard.html  demo.html  incident_detail.html  incident_response.html  incidents.html  knowledge_gaps.html  postmortem_detail.html  postmortems.html
tests/: test_data_loading.py
